minor improvements all around, including alphabetizing the selectAll query for categories, modified articles table to store (and sort queries by) datetime objects. also added a default -1 hour offset, incase feeds dont supply a date (this prevents them from sorting to the top all the time) as well as added support for article sharing (though the formatting could be worked on)